[artf502620]User inputs username field and password field as empty On clicking login both the username and the password fields are cleared off issue fixed and environment popup alignment issue in red/blue is fixed.

--- a/phresco-framework-web/src/main/webapp/theme/red_blue/css/phresco.css
+++ b/phresco-framework-web/src/main/webapp/theme/red_blue/css/phresco.css
@@ -2915,6 +2915,30 @@ fieldset {
 	margin-left:6px;
 }
 
+#formEnvironment .control-label {
+	width: 20%;
+	margin-left: 18px;
+	padding-right: 10px;
+	text-align: left;
+}
+
+#formEnvironment .controls {
+	margin-left: 100px;
+}	
+
+#formEnvironment #envName {
+	width: 290px;
+}
+
+#formEnvironment #envDesc {
+	min-width: 290px;
+}
+
+#formEnvironment .controls #add {
+	margin-left: 84%;
+    margin-top: -13%;
+}
+
 .popupimage {
 	float: left;
 	margin-left: 5px;
